NULL =

png_icons = \
	ac-adapter.png \
	audio-card.png \
	audio-headphones.png \
	audio-headset.png \
	audio-input-microphone.png \
	audio-speakers.png \
	battery.png \
	camera-photo.png \
	camera-video.png \
	camera-web.png \
	computer.png \
	drive-harddisk.png \
	drive-multidisk.png \
	drive-optical.png \
	drive-removable-media.png \
	input-dialpad.png \
	input-gaming.png \
	input-keyboard.png \
	input-mouse.png \
	input-tablet.png \
	input-touchpad.png \
	media-flash.png \
	media-floppy.png \
	media-optical.png \
	media-removable.png \
	media-tape.png \
	multimedia-player.png \
	modem.png \
	network-vpn.png \
	network-wired.png \
	network-wireless.png \
	pda.png \
	phone.png \
	printer.png \
	printer-network.png \
	scanner.png \
	uninterruptible-power-supply.png \
	video-display.png \
	$(NULL)

ac-adapter.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=304:101:326:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-card.png: ../../../src/audio-card.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-headphones.png: ../../../src/audio-headphones.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:399:325:421 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-headset.png: ../../../src/audio-headphones.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:99:325:121 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-input-microphone.png: ../../../src/audio-input-microphone.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-speakers.png: ../../../src/audio-speakers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:701:325:723 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

camera-photo.png: ../../../src/camera-photo.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=301:102:323:124 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

camera-video.png: ../../../src/camera-video.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

camera-web.png: ../../../src/camera-web.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

computer.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:402:325:424 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

drive-harddisk.png: ../../../src/drive-harddisk.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:96:325:118 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

drive-multidisk.png: ../../../src/drive-multidisk.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:96:325:118 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

drive-optical.png: ../../../src/drives.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

drive-removable-media.png: ../../../src/drives.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:101:725:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

input-dialpad.png: ../../../src/input-dialpad.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:101:324:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

input-gaming.png: ../../../src/input-gaming.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=343:120:365:142 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

input-keyboard.png: ../../../src/keyboards.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

input-mouse.png: ../../../src/input-mouse.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

input-tablet.png: ../../../src/input-tablet.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

input-touchpad.png: ../../../src/input-touchpad.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-flash.png: ../../../src/media-flash.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:100:325:122 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-floppy.png: ../../../src/media-floppy.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:100:325:122 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-optical.png: ../../../src/media-optical.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-removable.png: ../../../src/media-removable.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:101:324:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-tape.png: ../../../src/media-tape.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

multimedia-player.png: ../../../src/multimedia-player.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:102:325:124 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

modem.png: ../../../src/modem.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-vpn.png: ../../../src/network-vpn.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-wired.png: ../../../src/network-wired.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=304:101:326:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-wireless.png: ../../../src/network-wireless.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

pda.png: ../../../src/pda.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

phone.png: ../../../src/phone.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:101:324:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

printer.png: ../../../src/printers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:394:325:416 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

printer-network.png: ../../../src/printer-network.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:99:325:121 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

scanner.png: ../../../src/scanner.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:100:325:122 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

uninterruptible-power-supply.png: ../../../src/uninterruptible-power-supply.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=304:101:326:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

video-display.png: ../../../src/displays.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:402:325:424 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

.PHONY: build-png-icons-local clean-png-icons-local
build-png-icons-local: $(png_icons)

clean-png-icons-local:
	@echo "  Cleaning icons..."
	@rm -f $(png_icons)
