NULL =

png_icons = \
	address-book-new.png \
	application-exit.png \
	appointment-new.png \
	bookmark-new.png \
	call-start.png \
	call-stop.png \
	contact-new.png \
	document-new.png \
	document-open-recent.png \
	document-page-setup.png \
	document-print.png \
	document-print-preview.png \
	document-properties.png \
	document-revert.png \
	document-revert-rtl.png \
	document-save-as.png \
	document-save.png \
	document-send.png \
	edit-clear.png \
	edit-clear-rtl.png \
	edit-copy.png \
	edit-cut.png \
	edit-delete.png \
	edit-find.png \
	edit-find-replace.png \
	edit-paste.png \
	edit-redo.png \
	edit-redo-rtl.png \
	edit-select-all.png \
	edit-undo.png \
	edit-undo-rtl.png \
	format-indent-less.png \
	format-indent-less-rtl.png \
	format-indent-more.png \
	format-indent-more-rtl.png \
	format-justify-center.png \
	format-justify-fill.png \
	format-justify-left.png \
	format-justify-right.png \
	format-text-bold.png \
	format-text-direction-ltr.png \
	format-text-direction-rtl.png \
	format-text-italic.png \
	format-text-strikethrough.png \
	format-text-underline.png \
	go-bottom.png \
	go-down.png \
	go-first.png \
	go-home.png \
	go-jump.png \
	go-last.png \
	go-next.png \
	go-previous.png \
	go-top.png \
	go-up.png \
	help-about.png \
	help-faq.png \
	insert-image.png \
	insert-link.png \
	insert-object.png \
	insert-text.png \
	list-add.png \
	list-remove.png \
	mail-forward.png \
	mail-mark-important.png \
	mail-mark-junk.png \
	mail-mark-notjunk.png \
	mail-mark-read.png \
	mail-mark-unread.png \
	mail-message-new.png \
	mail-reply-all.png \
	mail-reply-sender.png \
	mail-send.png \
	mail-send-receive.png \
	mark-location.png \
	media-eject.png \
	media-playback-pause.png \
	media-playback-start.png \
	media-playback-start-rtl.png \
	media-playback-stop.png \
	media-record.png \
	media-seek-backward.png \
	media-seek-forward.png \
	media-skip-backward.png \
	media-skip-forward.png \
	object-flip-horizontal.png \
	object-flip-vertical.png \
	object-rotate-left.png \
	object-rotate-right.png \
	process-stop.png \
	system-lock-screen.png \
	system-log-out.png \
	system-run.png \
	system-search.png \
	system-shutdown.png \
	tab-new.png \
	tools-check-spelling.png \
	view-fullscreen.png \
	view-refresh.png \
	view-restore.png \
	view-sort-ascending.png \
	view-sort-descending.png \
	window-close.png \
	window-new.png \
	zoom-fit-best.png \
	zoom-in.png \
	zoom-original.png \
	zoom-out.png \
	$(NULL)

address-book-new.png: ../../../src/x-office-address-book.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

application-exit.png:../../../src/application-exit.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

appointment-new.png: ../../../src/clocks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:395:326:419 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

bookmark-new.png: ../../../src/bookmark-new.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

call-start.png: ../../../src/call-start.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

call-stop.png: ../../../src/call-stop.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

contact-new.png: ../../../src/contact-new.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-new.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=700:397:724:421 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-open.png: ../../../src/folders.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1502:700:1526:724 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-open-recent.png: ../../../src/clocks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:95:726:119 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-page-setup.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=300:97:324:121 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-print.png: ../../../src/printers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:93:326:117 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-print-preview.png: ../../../src/printers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1102:394:1126:418 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-properties.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1100:397:1124:421 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-revert.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1900:397:1924:421 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-revert-rtl.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1499:97:1523:121 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-save-as.png: ../../../src/cabinets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1102:100:1126:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-save.png: ../../../src/cabinets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:100:726:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-send.png: ../../../src/document-send.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-clear.png: ../../../src/edit-clear-all.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-clear-rtl.png: ../../../src/edit-clear-all.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -flop $@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-copy.png: ../../../src/copy-paste-tasks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:400:726:424 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-cut.png: ../../../src/edit-cut.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-delete.png: ../../../src/edit-delete.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-find.png: ../../../src/find.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=300:100:324:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-find-replace.png: ../../../src/find.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=700:100:724:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-paste.png: ../../../src/copy-paste-tasks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:400:326:424 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-undo.png: ../../../src/edit-undo-redo.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:61:46:85 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-redo.png: ../../../src/edit-undo-redo.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=82:61:106:85 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-select-all.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1500:397:1524:421 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-redo-rtl.png: ../../../src/edit-undo-redo.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=143:61:167:85 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-undo-rtl.png: ../../../src/edit-undo-redo.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=201:61:225:85 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

folder-new.png: ../../../src/folders.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:700:326:724 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-indent-less-rtl.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=-108:41:-84:65 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-indent-more-rtl.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=-48:41:-24:65 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-indent-less.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=12:41:36:65 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-indent-more.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=72:41:96:65 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-justify-left.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=132:41:156:65 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-justify-center.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=192:41:216:65 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-justify-right.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=252:41:276:65 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-justify-fill.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=312:41:336:65 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-text-bold.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=372:41:396:65 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-text-direction-ltr.png: ../../../src/format-text-direction-ltr.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-text-direction-rtl.png: ../../../src/format-text-direction-rtl.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-text-italic.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=433:41:457:65 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-text-strikethrough.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=492:41:516:65 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-text-underline.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=552:41:576:65 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-jump.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=32:56:56:80 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-bottom.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=112:56:136:80 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-down.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=192:56:216:80 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-top.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=282:56:306:80 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-up.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=372:56:396:80 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-first.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=462:56:486:80 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-previous.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=542:56:566:80 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

view-refresh.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=622:56:646:80 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

process-stop.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:56:726:80 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-next.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=782:56:806:80 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-last.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=862:56:886:80 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-home.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=942:56:966:80 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

help-about.png: ../../../src/help-about.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

help-faq.png: ../../../src/help-faq.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

insert-image.png: ../../../src/insert-image.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

insert-link.png: ../../../src/insert-link.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

insert-object.png: ../../../src/insert-object.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

insert-text.png: ../../../src/insert-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

list-add.png: ../../../src/list-add-remove.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

list-remove.png: ../../../src/list-add-remove.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:100:726:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-forward.png: ../../../src/mail-forward.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-mark-important.png: ../../../src/mail-mark-important.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-mark-junk.png: ../../../src/mail-mark-junk.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=295:201:345:251 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-mark-notjunk.png: ../../../src/mail-mark-notjunk.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=296:122:320:146 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-mark-read.png: ../../../src/open-envelopes.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1502:100:1526:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-mark-unread.png: ../../../src/mail-mark-unread.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-message-new.png: ../../../src/open-envelopes.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-reply-all.png: ../../../src/mail-reply-all.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-reply-sender.png: ../../../src/mail-reply-sender.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-send.png: ../../../src/mail-send.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-send-receive.png: ../../../src/mail-send-receive.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mark-location.png: ../../../src/mark-location.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-eject.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=72:30:96:54 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-skip-backward.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=102:30:126:54 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-seek-backward.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=132:30:156:54 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-playback-pause.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=162:30:186:54 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-playback-start.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=192:30:216:54 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-playback-stop.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=222:30:246:54 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-seek-forward.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=252:30:276:54 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-skip-forward.png:	../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=282:30:306:54 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-record.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=312:30:336:54 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-playback-start-rtl.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=352:30:376:54 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

object-flip-horizontal.png: ../../../src/object-flip-rotate.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=21:60:45:84 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

object-flip-vertical.png: ../../../src/object-flip-rotate.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=51:60:75:84 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

object-rotate-left.png: ../../../src/object-flip-rotate.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=82:60:106:84 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

object-rotate-right.png: ../../../src/object-flip-rotate.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=111:60:135:84 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-lock-screen.png: ../../../src/displays.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:100:726:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-log-out.png: ../../../src/system-log-out.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-run.png: ../../../src/system-run.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-search.png: ../../../src/system-search.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-shutdown.png: ../../../src/system-shutdown.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

tab-new.png: ../../../src/tab-new.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

tools-check-spelling.png: ../../../src/tools-check-spelling.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

view-fullscreen.png: ../../../src/view-fullscreen-restore.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

view-restore.png: ../../../src/view-fullscreen-restore.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:100:726:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

view-sort-ascending.png: ../../../src/view-sort.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=21:100:45:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

view-sort-descending.png: ../../../src/view-sort.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=81:100:105:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

window-close.png: ../../../src/window-close.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

window-new.png: ../../../src/window-new.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

zoom-fit-best.png: ../../../src/zoom.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:100:726:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

zoom-in.png: ../../../src/zoom.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:400:326:424 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

zoom-original.png: ../../../src/zoom.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:100:326:124 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

zoom-out.png: ../../../src/zoom.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=702:400:726:424 -w=24 -h=24 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

.PHONY: build-png-icons-local clean-png-icons-local
build-png-icons-local: $(png_icons)

clean-png-icons-local:
	@echo "  Cleaning icons..."
	@rm -f $(png_icons)
